# InferSQL

./: .env.example  .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  catalog.py  copilot.py  dependencies.py  health.py  query.py  routes.py
backend/app/core/: config.py  error_handlers.py  exceptions.py  lifespan.py  logging.py  middleware.py  observability.py  settings.py
backend/app/core/catalog/: __init__.py  registry.py
backend/app/core/engine/: parser.py  physical_planner.py  service.py  validator.py
backend/app/core/engine/executor/: __init__.py  aggregate.py  filter.py  limit.py  project.py  scan.py  service.py  sort.py
backend/app/engine/: errors.py  interfaces.py  parser.py  planner.py  service.py  validator.py
backend/app/schemas/: catalog.py  copilot.py  health.py  query.py
backend/app/services/: copilot_eval_summary.py  copilot_schema_context.py  copilot_schema_selector.py  copilot_service.py  datafusion_runner.py  ingestion_service.py  query_compiler.py  query_runner.py  query_service.py
backend/app/services/llm/: base.py  factory.py  fallback_provider.py  gemini_provider.py  ollama_provider.py  openai_provider.py  prompt_assets.py  prompt_builder.py  remote_provider.py
backend/tests/: conftest.py  test_catalog_api.py  test_config.py  test_copilot_eval.py  test_copilot_eval_summary.py  test_copilot_schema_context.py  test_copilot_schema_selector.py  test_copilot_service.py  test_dataset_registry.py  test_dataset_registry_unit.py  test_fallback_llm_provider.py  test_ingestion_service.py  test_llm_factory.py  test_logging.py  test_openapi.py  test_parser_unit.py  test_physical_planner_unit.py  test_prompt_assets.py  test_query_execute.py  test_query_plan.py  test_query_runner_unit.py  test_query_service_schema_validation_unit.py  test_query_validate.py  test_schema_alignment.py  test_schemas.py  test_smoke.py
backend/tests/fixtures/: copilot_eval_cases.json
benchmark_results/: benchmark_iterations_20260625T221025Z.csv  benchmark_summary_20260625T221025Z.csv  benchmark_summary_20260625T221025Z.json
configs/: base.yaml
data/: demo_upload.csv
data/processed/: panel_v1.csv
docs/: Blueprint.md  architecture.md  development.md  progress.md  todo.md  todo_backend.md
frontend/: README.md  package-lock.json  package.json
frontend/public/benchmarks/: summary.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/types/: catalog.ts  copilot.ts  history.ts  query.ts
scripts/: benchmark_queries.py  bootstrap.ps1  check_benchmark_regression.py  compare_benchmarks.py  run_copilot_live_eval.py  seed_benchmark_datasets.py
src/bastionquant/: __main__.py  cli.py  settings.py
src/bastionquant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/bastionquant/features/: build_features.py  targets.py
src/bastionquant/ingestion/: build_panel.py  (+2 more)
tests/: test_features_smoke.py  test_smoke.py
(+22 files in other folders)
