[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bastionquant"
version = "0.1.0"
description = "Financial ML robustness auditing platform"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Gail Le" }
]
dependencies = [
  "pandas>=2.2.2",
  "numpy>=1.26.4",
  "PyYAML>=6.0.1",
  "python-dotenv>=1.0.1",
  "yfinance>=0.2.54",
  "fredapi>=0.5.2",
  "requests>=2.32.3",
  "scikit-learn>=1.5.0",
  "mlflow>=2.14.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.2",
  "ruff>=0.4.8",
  "black>=24.4.2"
]

[project.scripts]
bastionquant = "bastionquant.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]