[project]
name = "infersql-backend"
version = "0.1.0"
description = "InferSQL backend service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "sqlglot>=30.10.0,<31.0.0",
    "pyarrow>=18.0.0,<25.0.0",
    "opentelemetry-api>=1.27.0,<2.0.0",
    "opentelemetry-sdk>=1.27.0,<2.0.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0,<1.0.0",
    "requests>=2.32.0,<3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0,<10.0.0",
    "httpx>=0.27.0,<1.0.0",
    "ruff>=0.5.0,<1.0.0",
]